{
    "name": "GameInputs",
    "maps": [
        {
            "name": "Gameplay",
            "id": "b654dde5-d9a1-4a30-a6f1-09eb6d248264",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "91195726-8329-4d84-ae26-ac01856f5fe0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Look",
                    "type": "PassThrough",
                    "id": "f3538674-8fd1-4824-bd48-543473365942",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Restart",
                    "type": "Button",
                    "id": "fa5052f2-47be-4a60-a51c-49eeed789a20",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "SpecialAction",
                    "type": "PassThrough",
                    "id": "13b6ea9b-3654-4df9-b48d-0fced84ed53a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "db94d7a4-aff3-43b0-bfa3-5899a8b3ebc8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "TopView",
                    "type": "Button",
                    "id": "ad0264c2-53e5-4a6d-8d0a-d6fcdaaf73e5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "EagleView",
                    "type": "Button",
                    "id": "c74cbc7d-8c26-4b7b-9ae2-96d45c1c6551",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "MoveVertical",
                    "type": "Value",
                    "id": "2e2b5b3c-1125-4d6d-9698-276933e3a5b0",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "MoveHorizontal",
                    "type": "Value",
                    "id": "f73dd3ae-8b59-4c0c-9169-931dff80076c",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ea07c451-6671-4e68-9d2f-a2e11d153e34",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "ScaleVector2(x=50,y=50)",
                    "groups": "Gamepad",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7404c92c-71b2-4755-b555-d45b1ec210c6",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3185a498-3c36-489c-aaea-101bd7431c1c",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f67ad06-9783-4771-ad4b-141685757110",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b227535c-821c-44ad-8016-dc1686793053",
                    "path": "<Keyboard>/backspace",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d4e9534e-7832-46b0-aafb-7c0bedb68626",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "SpecialAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bf122ae8-fd99-44ad-89ff-06d4f210b945",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "SpecialAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "65f01606-26a7-49b3-937e-a87c360b8930",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a9780107-a997-41a6-8136-cee23004a45b",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "da72bc85-8a80-4a52-8091-f3637f246567",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TopView",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9de3a923-d876-4505-90b9-8b5a5cf4d728",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TopView",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "51ba5470-71e7-4d5f-9f7c-a34608004017",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TopView",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eadf1ca0-bd9d-466d-86f1-17e4e195a194",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EagleView",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "144e3058-d133-4dcd-892b-ae0c989ef003",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EagleView",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "GamepadUpDown",
                    "id": "a232e304-4972-4d19-abc0-4d6b06c89165",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "81994151-4c1f-4c04-9d82-d8a8e16cc87e",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "4f09a975-0621-41f1-a930-9273ec749937",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "KeyboardUpDown",
                    "id": "8604099e-5b19-4fe9-a3e0-8d5ea9ab2f3a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "17cb6e65-e231-4a54-91d8-3e83853a0ec8",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "53712566-8e8a-42aa-bbaa-4a89daaed899",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "KeyboardZS",
                    "id": "d046947f-46b1-48dc-ab9d-b710e49a042e",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "dc3d7375-6b9a-4e0d-bd3b-46dfd0e5fe81",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "b9139c42-09f5-4187-aebc-d1b833ec488d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "51b9c708-ea2c-483a-89d0-4458999b46b2",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "GamepadLeftRight",
                    "id": "2dd0f533-f460-4a5c-8fa9-111784bb72d2",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "49bda847-8927-4f91-a0f8-cc815cb09dbb",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "36382e97-6080-4ff0-b07d-111f70c7ae2e",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "KeyboardLeftRight",
                    "id": "66f380d1-01a7-41e1-928e-859f2089fba1",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "b2b528b6-17a3-4ab6-befa-d182a3b28b32",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "42fee1a8-d686-4c8d-abcd-c495ee9f08a4",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "KeyboardQD",
                    "id": "fbe6bcd0-9014-42ab-9691-42cf7cdbd469",
                    "path": "1DAxis",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "0f770337-cfb5-4cb9-9352-fde258c9dbca",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "8b70bbc4-fce8-4e3f-a46e-8ee21b629471",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}